Improve card header and footer theming

--- a/scss/_settings.scss
+++ b/scss/_settings.scss
@@ -1032,11 +1032,19 @@ $card-link-margin-left:     1.25rem !default;
 $card-title-margin-bottom:  1rem !default;
 $card-subtitle-margin-top:  -.5rem !default;
 
-$card-cap-padding-y:        .75rem !default;
-$card-cap-padding-x:        1rem !default;
-$card-cap-bg:               $component-section-bg !default;
-$card-cap-border-color:     $component-section-border-color !default;
-$card-cap-border-width:     $card-border-width !default;
+$card-header-padding-y:     .75rem !default;
+$card-header-padding-x:     1rem !default;
+$card-header-bg:            $component-section-bg !default;
+$card-header-color:         $body-color !default;
+$card-header-border-color:  $component-section-border-color !default;
+$card-header-border-width:  $card-border-width !default;
+
+$card-footer-padding-y:     .75rem !default;
+$card-footer-padding-x:     1rem !default;
+$card-footer-bg:            $component-section-bg !default;
+$card-footer-color:         $body-color !default;
+$card-footer-border-color:  $component-section-border-color !default;
+$card-footer-border-width:  $card-border-width !default;
 
 $card-img-overlay-padding:  $card-padding-y $card-padding-x !default;
 
