Add enable options for utility icons

--- a/scss/_settings-options.scss
+++ b/scss/_settings-options.scss
@@ -235,6 +235,10 @@ $enable-utility-flex-sizing:                true !default;
 
 $enable-utility-float:                      true !default;
 
+$enable-utility-caret:                      true !default;
+$enable-utility-close:                      true !default;
+$enable-utility-drag:                       true !default;
+
 $enable-utility-position:                   true !default;
 $enable-utility-position-common:            true !default;
 $enable-utility-position-fixed:             true !default;
