--- a/scss/component/_close.scss
+++ b/scss/component/_close.scss
@@ -1,32 +1,33 @@
-.close {
-    @include font-size($close-font-size);
-    font-weight: $close-font-weight;
-    line-height: 1;
-    color: inherit;
-    text-decoration: none;
-    opacity: $close-opacity;
+@if $enable-utility-close {
+    .close {
+        @include font-size($close-font-size);
+        font-weight: $close-font-weight;
+        line-height: 1;
+        color: inherit;
+        text-decoration: none;
+        opacity: $close-opacity;
 
-    &:not(:disabled):not(.disabled) {
-        cursor: pointer;
+        &:not(:disabled):not(.disabled) {
+            cursor: pointer;
 
-        @include hover-focus() {
-            color: inherit;
-            text-decoration: none;
-            opacity: $close-hover-opacity;
+            @include hover-focus() {
+                color: inherit;
+                text-decoration: none;
+                opacity: $close-hover-opacity;
+            }
         }
     }
-}
 
-// Additional properties for button version
-// iOS requires the button element instead of an anchor tag.
-// If you want the anchor version, it requires `href="#"`.
-// See https://developer.mozilla.org/en-US/docs/Web/Events/click#Safari_Mobile
+    // Additional properties for button version
+    // iOS requires the button element instead of an anchor tag.
+    // If you want the anchor version, it requires `href="#"`.
+    // See https://developer.mozilla.org/en-US/docs/Web/Events/click#Safari_Mobile
 
-// stylelint-disable selector-no-qualifying-type, property-no-vendor-prefix
-button.close {
-    padding: 0;
-    background-color: transparent;
-    border: 0;
-    -webkit-appearance: none;
+    // stylelint-disable-next-line selector-no-qualifying-type
+    button.close {
+        padding: 0;
+        background-color: transparent;
+        border: 0;
+        appearance: none;
+    }
 }
-// stylelint-enable selector-no-qualifying-type, property-no-vendor-prefix
