--- a/scss/component/_drag.scss
+++ b/scss/component/_drag.scss
@@ -1,33 +1,34 @@
-.drag {
-    @include font-size($drag-font-size);
-    font-weight: $drag-font-weight;
-    line-height: 1;
-    color: inherit;
-    text-decoration: none;
-    touch-action: none;
-    opacity: $drag-opacity;
+@if $enable-utility-drag {
+    .drag {
+        @include font-size($drag-font-size);
+        font-weight: $drag-font-weight;
+        line-height: 1;
+        color: inherit;
+        text-decoration: none;
+        touch-action: none;
+        opacity: $drag-opacity;
 
-    &:not(:disabled):not(.disabled) {
-        cursor: move;
+        &:not(:disabled):not(.disabled) {
+            cursor: move;
 
-        @include hover-focus() {
-            color: inherit;
-            text-decoration: none;
-            opacity: $drag-hover-opacity;
+            @include hover-focus() {
+                color: inherit;
+                text-decoration: none;
+                opacity: $drag-hover-opacity;
+            }
         }
     }
-}
 
-// Additional properties for button version
-// iOS requires the button element instead of an anchor tag.
-// If you want the anchor version, it requires `href="#"`.
-// See https://developer.mozilla.org/en-US/docs/Web/Events/click#Safari_Mobile
+    // Additional properties for button version
+    // iOS requires the button element instead of an anchor tag.
+    // If you want the anchor version, it requires `href="#"`.
+    // See https://developer.mozilla.org/en-US/docs/Web/Events/click#Safari_Mobile
 
-// stylelint-disable selector-no-qualifying-type, property-no-vendor-prefix
-button.drag {
-    padding: 0;
-    background-color: transparent;
-    border: 0;
-    -webkit-appearance: none;
+    // stylelint-disable-next-line selector-no-qualifying-type
+    button.drag {
+        padding: 0;
+        background-color: transparent;
+        border: 0;
+        appearance: none;
+    }
 }
-// stylelint-enable selector-no-qualifying-type, property-no-vendor-prefix
