--- a/scss/_settings-options.scss
+++ b/scss/_settings-options.scss
@@ -216,6 +216,12 @@ $enable-popover-close:                      true !default;
 $enable-popover-drag:                       true !default;
 $enable-popover-draggable:                  true !default;
 
+// Tooltip
+$enable-tooltip:                            true !default;
+$enable-tooltip-arrow:                      true !default;
+$enable-tooltip-body:                       true !default;
+$enable-tooltip-close:                      true !default;
+
 // Utility Options
 $enable-utility-bg:                         true !default;
 $enable-utility-bg-colors:                  true !default;
