--- a/scss/component/_tooltip.scss
+++ b/scss/component/_tooltip.scss
@@ -1,102 +1,120 @@
-.tooltip {
-    position: absolute;
-    z-index: $zindex-tooltip;
-    display: block;
-    // Our parent element can be arbitrary since tooltips are by default inserted as a sibling of their target element.
-    // So reset our font and text properties to avoid inheriting weird values.
-    @include reset-text();
-    @include font-size($tooltip-font-size);
-    // Allow breaking very long words so they don't overflow the tooltip's bounds
-    word-wrap: break-word;
-    opacity: 0;
+@if $enable-tooltip {
+    .tooltip {
+        position: absolute;
+        z-index: $zindex-tooltip;
+        display: block;
+        // Our parent element can be arbitrary since tooltips are by default inserted as a sibling of their target element.
+        // So reset our font and text properties to avoid inheriting weird values.
+        @include reset-text();
+        @include font-size($tooltip-font-size);
+        // Allow breaking very long words so they don't overflow the tooltip's bounds
+        word-wrap: break-word;
+        opacity: 0;
 
-    // Showing
-    &.in {
-        opacity: $tooltip-opacity;
-    }
+        // Showing
+        &.in {
+            opacity: $tooltip-opacity;
+        }
 
-    // Directions
-    &.top {
-        padding: $tooltip-arrow-width 0;
-        margin-top: -$tooltip-margin;
-    }
-    &.forward {
-        padding: 0 $tooltip-arrow-width;
-        margin-left: $tooltip-margin #{"/*rtl:"}-$tooltip-margin#{"*/"};
-    }
-    &.bottom {
-        padding: $tooltip-arrow-width 0;
-        margin-top: $tooltip-margin;
-    }
-    &.reverse {
-        padding: 0 $tooltip-arrow-width;
-        margin-left: -$tooltip-margin #{"/*rtl:"}$tooltip-margin#{"*/"};
-    }
+        // Directions
+        &.top {
+            @if $enable-tooltip-arrow {
+                padding: $tooltip-arrow-width 0;
+            }
+            margin-top: -$tooltip-margin;
+        }
+        &.forward {
+            @if $enable-tooltip-arrow {
+                padding: 0 $tooltip-arrow-width;
+            }
+            margin-left: $tooltip-margin #{"/*rtl:"}-$tooltip-margin#{"*/"};
+        }
+        &.bottom {
+            @if $enable-tooltip-arrow {
+                padding: $tooltip-arrow-width 0;
+            }
+            margin-top: $tooltip-margin;
+        }
+        &.reverse {
+            @if $enable-tooltip-arrow {
+                padding: 0 $tooltip-arrow-width;
+            }
+            margin-left: -$tooltip-margin #{"/*rtl:"}$tooltip-margin#{"*/"};
+        }
 
-    // Arrows
-    &.top .tooltip-arrow {
-        bottom: 0;
-        left: 50% #{"/*rtl:ignore*/"};
-        margin-left: -$tooltip-arrow-width;
-        border-width: $tooltip-arrow-width $tooltip-arrow-width 0;
-        border-top-color: $tooltip-arrow-color;
-    }
-    &.forward .tooltip-arrow {
-        top: 50%;
-        left: 0;
-        margin-top: -$tooltip-arrow-width;
-        border-width: $tooltip-arrow-width $tooltip-arrow-width $tooltip-arrow-width 0;
-        border-right-color: $tooltip-arrow-color;
-    }
-    &.reverse .tooltip-arrow {
-        top: 50%;
-        right: 0;
-        margin-top: -$tooltip-arrow-width;
-        border-width: $tooltip-arrow-width 0 $tooltip-arrow-width $tooltip-arrow-width;
-        border-left-color: $tooltip-arrow-color;
-    }
-    &.bottom .tooltip-arrow {
-        top: 0;
-        left: 50% #{"/*rtl:ignore*/"};
-        margin-left: -$tooltip-arrow-width;
-        border-width: 0 $tooltip-arrow-width $tooltip-arrow-width;
-        border-bottom-color: $tooltip-arrow-color;
-    }
+        // Arrows
+        @if $enable-tooltip-arrow {
+            &.top .tooltip-arrow {
+                bottom: 0;
+                left: 50% #{"/*rtl:ignore*/"};
+                margin-left: -$tooltip-arrow-width;
+                border-width: $tooltip-arrow-width $tooltip-arrow-width 0;
+                border-top-color: $tooltip-arrow-color;
+            }
+            &.forward .tooltip-arrow {
+                top: 50%;
+                left: 0;
+                margin-top: -$tooltip-arrow-width;
+                border-width: $tooltip-arrow-width $tooltip-arrow-width $tooltip-arrow-width 0;
+                border-right-color: $tooltip-arrow-color;
+            }
+            &.reverse .tooltip-arrow {
+                top: 50%;
+                right: 0;
+                margin-top: -$tooltip-arrow-width;
+                border-width: $tooltip-arrow-width 0 $tooltip-arrow-width $tooltip-arrow-width;
+                border-left-color: $tooltip-arrow-color;
+            }
+            &.bottom .tooltip-arrow {
+                top: 0;
+                left: 50% #{"/*rtl:ignore*/"};
+                margin-left: -$tooltip-arrow-width;
+                border-width: 0 $tooltip-arrow-width $tooltip-arrow-width;
+                border-bottom-color: $tooltip-arrow-color;
+            }
+        }
 
-    // Close
-    .close {
-        position: static;
-        float: right;
-        padding: $tooltip-close-padding-y $tooltip-close-padding-x;
-        color: $tooltip-close-color;
-        @include font-size(1.25rem);
-        text-shadow: none;
-        opacity: $tooltip-close-opacity;
+        // Close
+        @if $enable-tooltip-close {
+            .close {
+                position: static;
+                float: right;
+                padding: $tooltip-close-padding-y $tooltip-close-padding-x;
+                color: $tooltip-close-color;
+                @include font-size(1.25rem);
+                text-shadow: none;
+                opacity: $tooltip-close-opacity;
 
-        &:not(:disabled):not(.disabled) {
-            @include hover-focus() {
-                color: $tooltip-close-hover-color;
-                opacity: $tooltip-close-hover-opacity;
+                &:not(:disabled):not(.disabled) {
+                    @include hover-focus() {
+                        color: $tooltip-close-hover-color;
+                        opacity: $tooltip-close-hover-opacity;
+                    }
+                }
             }
         }
     }
-}
 
-// Wrapper for the tooltip content
-.tooltip-body {
-    max-width: $tooltip-max-width;
-    padding: $tooltip-padding-y $tooltip-padding-x;
-    color: $tooltip-color;
-    text-align: center;
-    background-color: $tooltip-bg;
-    @include border-radius($tooltip-border-radius);
-}
+    // Wrapper for the tooltip content
+    @if $enable-tooltip-body {
+        .tooltip-body {
+            max-width: $tooltip-max-width;
+            padding: $tooltip-padding-y $tooltip-padding-x;
+            color: $tooltip-color;
+            text-align: center;
+            background-color: $tooltip-bg;
+            @include border-radius($tooltip-border-radius);
+        }
+    }
 
-// Arrow base
-.tooltip-arrow {
-    position: absolute;
-    width: 0;
-    height: 0;
-    border-color: transparent;
-    border-style: solid;
+    // Arrow base
+    @if $enable-tooltip-arrow {
+        .tooltip-arrow {
+            position: absolute;
+            width: 0;
+            height: 0;
+            border-color: transparent;
+            border-style: solid;
+        }
+    }
 }
