Reduce specifity in lists and add missing pagination acitve border

--- a/scss/_settings.scss
+++ b/scss/_settings.scss
@@ -843,6 +843,7 @@ $pagination-hover-border-color: $pagination-border-color !default;
 
 $pagination-active-color:       $component-active-color !default;
 $pagination-active-bg:          $component-active-bg !default;
+$pagination-active-border-color: $component-active-border-color !default;
 
 $pagination-disabled-color:     $component-disabled-color !default;
 $pagination-disabled-bg:        $component-disabled-bg !default;
