--- a/scss/core/_reboot.scss
+++ b/scss/core/_reboot.scss
@@ -28,7 +28,6 @@ html {
     font-family: sans-serif; // 2
     line-height: 1.15; // 3
     -webkit-text-size-adjust: 100%; // 4
-    -ms-text-size-adjust: 100%; // 4
     -ms-overflow-style: scrollbar; // 5
 }
 
@@ -168,10 +167,6 @@ dd {
 
 blockquote {
     margin: 0 0 1rem;
-}
-
-dfn {
-    font-style: italic; // Add the correct font style in Android 4.3-
 }
 
 b,
@@ -353,7 +348,7 @@ select {
 //    controls in Android 4.
 // 2. Correct the inability to style clickable types in iOS and Safari.
 button,
-html [type="button"], // 1
+[type="button"], // 1
 [type="reset"],
 [type="submit"] {
     -webkit-appearance: button; // 2
@@ -436,8 +431,7 @@ progress {
     -webkit-appearance: none;
 }
 
-// Remove the inner padding and cancel buttons in Chrome and Safari on macOS.
-[type="search"]::-webkit-search-cancel-button,
+// Remove the inner padding in Chrome and Safari on macOS.
 [type="search"]::-webkit-search-decoration {
     -webkit-appearance: none;
 }
